# hyperplonk

./: Cargo.toml
arithmetic/: Cargo.toml
arithmetic/src/: eq_poly.rs  fraction.rs  gaussian_elimination.rs  lib.rs  math.rs  multilinear_polynomial.rs  optimized_mul.rs  unipoly.rs  util.rs  virtual_polynomial.rs
deDory/: Cargo.toml
deDory/src/: commit.rs  lib.rs  setup.rs
deDory/src/base/: mod.rs  rand_util.rs  serialize.rs
deDory/src/eval/: mod.rs  proof.rs  prove.rs  transcript.rs  utility.rs  verify.rs
deDory/src/tests/: eval_test.rs  mod.rs  setup_test.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: bench.rs
hyperplonk/src/: lib.rs  lookup.rs  mock.rs  snark.rs  structs.rs  utils.rs
subroutines/: Cargo.toml
subroutines/benches/: iop_bench.rs
subroutines/src/pcs/: mod.rs
subroutines/src/pcs/dory/: batching.rs  dory.rs  mod.rs
subroutines/src/pcs/multilinear_kzg/: batching.rs  mod.rs
subroutines/src/pcs/univariate_kzg/: mod.rs
subroutines/src/poly_iop/: mod.rs  prelude.rs  structs.rs  utils.rs
subroutines/src/poly_iop/lookup/: README.md  logup_checking.rs  logup_checking_piop.rs  mod.rs  util.rs
subroutines/src/poly_iop/lookup/instruction/: and.rs  mod.rs  or.rs  util.rs  xor.rs
subroutines/src/poly_iop/lookup/subtable/: and.rs  mod.rs  or.rs  test.rs  xor.rs
subroutines/src/poly_iop/perm_check/: layered_circuit.rs  mod.rs  util.rs
subroutines/src/poly_iop/prod_check/: mod.rs
subroutines/src/poly_iop/rational_sumcheck/: batched_cubic_sumcheck.rs  layered_circuit.rs  mod.rs
subroutines/src/poly_iop/sum_check/: batched_cubic_sumcheck.rs  generic_sumcheck.rs  mod.rs
subroutines/src/poly_iop/zero_check/: mod.rs
transcript/: Cargo.toml
transcript/src/: lib.rs
