[package]
name = "deDory"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-curve25519 = { version = "0.4.0" }
ark-ec = { version = "0.4.0", features = [ "parallel" ] }
ark-ff = { version = "0.4.0", features = [ "parallel" ] }
ark-poly = { version = "0.4.0", features = [ "parallel" ] }
ark-serialize = { version = "0.4.0" }
ark-std = { version = "0.4.0", features = [ "parallel" ] }
num-traits = { version = "0.2" }
itertools = { version = "0.13.0" }
transcript = { path = "../transcript" }
env_logger = "0.8"
structopt = "0.3"

derive_more = { version = "0.99" }
rand = { version = "0.8" }
rand_core = { version = "0.6" }
rayon = { version = "1.5" }
thiserror = { version = "1" }
serde = { version = "1" }
tracing = { version = "0.1.36" }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0" }
postcard = { version = "1.0" , features = ["alloc"] }
log = {version = "0.4"}

serde_derive = "1.0"
bincode = "1.3.3"

# # ============================================================
# arrayvec = { version = "0.7" }
# arrow = { version = "51.0" }
# arrow-csv = { version = "51.0" }
# bit-iter = { version = "1.1.1" }
# bigdecimal = { version = "0.4.5", features = ["serde"] }
# blake3 = { version = "1.3.3" }
# blitzar = { version = "3.0.2" }
# bumpalo = { version = "3.11.0" }
# bytemuck = {version = "1.16.3", features = ["derive"]}
# byte-slice-cast = { version = "1.2.1" }
# clap = { version = "4.5.4" }
# criterion = { version = "0.5.1" }
# chrono = { version = "0.4.38" }
# curve25519-dalek = { version = "4", features = ["rand_core"] }
# flexbuffers = { version = "2.0.0" }
# indexmap = { version = "2.1" }
# lalrpop-util = { version = "0.20.0" }
# lazy_static = { version = "1.4.0" }

# num-bigint = { version = "0.4.4", default-features = false }
# opentelemetry = { version = "0.23.0" }
# opentelemetry-jaeger = { version = "0.20.0" }


# wasm-bindgen = { version = "0.2.92" }
# zerocopy = { version = "0.7.34" }

[features]
default = ["parallel"]
bench = ["parallel"]
parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    "ark-ec/parallel",
]
